k8s/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: lion-site-static
  labels:
  app: lion-site-static
spec:
  selector:
    app.kubernetes.io/name: MyApp
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
